--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -17,7 +17,7 @@ head:
         # when there is not enough space to display full name
         short_name: 
         # The start URL of the web application
-        start_url: 
+        start_url: https://nolancn.github.io
         # The default theme color for the application
         theme_color: 
         # A placeholder background color for the application page to display
