--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -229,11 +229,11 @@ widgets:
         position: left
         type: profile
         # Author name
-        author: Your name
+        author: Nolan
         # Author title
         author_title: Your title
         # Author's current location
-        location: Your location
+        location: CN
         # URL or path to the avatar image
         avatar: 
         # Whether show the rounded avatar image
