--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -235,18 +235,18 @@ widgets:
         # Author's current location
         location: CN
         # URL or path to the avatar image
-        avatar: 
+        avatar: https://avatars.githubusercontent.com/u/149244328?v=4
         # Whether show the rounded avatar image
         avatar_rounded: false
         # Email address for the Gravatar
         gravatar: 
         # URL or path for the follow button
-        follow_link: https://github.com/ppoffice
+        follow_link: https://github.com/NolanCN
         # Links to be shown on the bottom of the profile widget
         social_links:
             Github:
                 icon: fab fa-github
-                url: https://github.com/ppoffice
+                url: https://github.com/NolanCN
             Facebook:
                 icon: fab fa-facebook
                 url: https://facebook.com
