--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -12,10 +12,10 @@ head:
     # https://developer.mozilla.org/en-US/docs/Web/Manifest
     manifest:
         # Name of the web application (default to the site title)
-        name: Nolan
+        name: Nolan`s Blog
         # The displayed name of the web application
         # when there is not enough space to display full name
-        short_name: 
+        short_name: Nolan
         # The start URL of the web application
         start_url: https://nolancn.github.io
         # The default theme color for the application
@@ -114,7 +114,7 @@ navbar:
     links:
         Download on GitHub:
             icon: fab fa-github
-            url: https://github.com/ppoffice/hexo-theme-icarus
+            url: https://github.com/NolanCN
 # Page footer configurations
 footer:
     # Copyright text
@@ -129,7 +129,7 @@ footer:
             url: https://creativecommons.org/licenses/by/4.0/
         Download on GitHub:
             icon: fab fa-github
-            url: https://github.com/ppoffice/hexo-theme-icarus
+            url: https://github.com/NolanCN
 # Article related configurations
 article:
     # Code highlight settings
@@ -231,7 +231,7 @@ widgets:
         # Author name
         author: Nolan
         # Author title
-        author_title: Your title
+        author_title: CS专业在读本科
         # Author's current location
         location: CN
         # URL or path to the avatar image
